--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/alexgoff/lessons-api#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0"
